--- a/8.3/4.87/NORMAL/CEX/SRC/test_payload/payload/Makefile
+++ b/8.3/4.87/NORMAL/CEX/SRC/test_payload/payload/Makefile
@@ -38,4 +38,5 @@ $(TARGET).elf: $(OBJS) $(TARGET).ld
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
+	@echo -e "\e[1;32mCleaning test_payload...\e[0m"
 	@rm -f *.o *.elf *.self *.bin *.map ../lv1/src/*.o ../debug/src/*.o ../lv2/src/*.o
